# gmat-cli

./: .gitignore  LICENSE  Makefile  README.md
example/kimi2/: README.md  export_config.json  import_config.json  model.json
example/tiny_llm/: README.md  config.json  import_config.json
example/tiny_llm/export/: export-balanced.json  export-economy.json  export-premium.json
export-overrides/models/: README.md  deepseek.json  gemma.json  glm.json  kimi.json  llama.json  phi.json  qwen2.json
gmat-cli/: Cargo.toml
gmat-cli/src/: main.rs  workqueue.rs
gmat-cli/src/common/: mod.rs  runtime.rs
gmat-cli/src/config/: export_config.rs  import_config.rs  mod.rs
gmat-cli/src/export/: config_gen.rs  mod.rs  shard.rs  tensor_overrides.rs  tensor_types.rs  token_metadata.rs  util.rs  validate.rs
gmat-cli/src/import/: metadata.rs  mod.rs  streaming.rs  token_parsers.rs
gmat-cli/src/tokens/: io.rs  mod.rs  special_config.rs
gmat-cli/tests/: integration_test.rs
gmat-machete/: Cargo.toml  resume.txt
gmat-machete/src/: lib.rs  pruning.rs  sparsity.rs
gmat-potter/: Cargo.toml  resume.txt
gmat-potter/src/: lib.rs  tracing.rs  transforms.rs  trellis.rs
transform-storage/: Cargo.toml
transform-storage/examples/: test_error.rs  test_quantization.rs  test_quantization_e2e.rs  test_range.rs
transform-storage/src/: block.rs  config.rs  formats.rs  graph_matrix.rs  graph_matrix_tests.rs  lib.rs  tensor_exports.rs
wiki/: Configuration-Files.md  Export-Command.md  FAQ.md  Home.md  Import-Command.md  Installation.md  Technical-Details.md  machine_talk.md
(+69 files in other folders)
