[package]
name = "gmat-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for importing and exporting GMAT model files"

[[bin]]
name = "gmat"
path = "src/main.rs"

[dependencies]
transform-storage = { path = "../transform-storage" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
gguf-rs-lib = "0.2"
half = "2"
rayon = "1.10"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"

[workspace]
